gix ingredients and links

--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Dulce & Co. | Sweet Life. Sweet Memories.</title>
+
+    <title>LE SPA NATUREL | Organic Spa Retreat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="dulceandco, dulce and co, wedding, events, planning, floral design">
-    <meta name="description" content="Wedding and Events Stylist specializing in Planning, Floral Design, Decor, and Rentals.">
+    <meta name="keywords" content="le spa, le spa naturel, spa, spa PH, le spa naturel wellness, le spa ph, le spa naturel ph">
+    <meta name="description" content="Organic Spa Retrea.">
     <meta name="author" content="Karen Ann Kho">
 
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -33,16 +33,17 @@
                     <div class="span8">
                         <div class="follow_us">
                             <ul>
-                                <li><a href="http://www.facebook.com/dulceandco" target="_blank" class="facebook">Facebook</a></li>
-                                <li><a href="http://www.twitter.com/dulceandco" target="_blank" class="twitter">Twitter</a></li>
-                                <li><a href="http://www.instagram.com/dulceandco" target="_blank" class="instagram">Instagram</a></li>
+                                <li><a href="http://www.facebook.com/lespanaturel" target="_blank" class="facebook">Facebook</a></li>
+                                <li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li>
                             </ul>
                         </div>
                         <div class="clear"></div>
                         <div class="my_menu">
                             <ul class="mynav">
-                                <li><a href="index.html">HOME</a></li>
-                                <li class="current"><a href="about.html">About</a></li>
+                                <li class="current"><a href="index.html">HOME</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="products.html">Products</a></li>
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="contactus.html">Contact Us</a></li>
                             </ul>
