--- a/contactus.html
+++ b/contactus.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Dulce & Co. | Sweet Life. Sweet Memories.</title>
+    <title>LE SPA NATUREL | Organic Spa Retreat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="dulceandco, dulce and co, wedding, events, planning, floral design">
-    <meta name="description" content="Wedding and Events Stylist specializing in Planning, Floral Design, Decor, and Rentals.">
+    <meta name="keywords" content="le spa, le spa naturel, spa, spa PH, le spa naturel wellness, le spa ph, le spa naturel ph">
+    <meta name="description" content="Organic Spa Retrea.">
     <meta name="author" content="Karen Ann Kho">
 
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -21,41 +21,40 @@
 
 </head>
 <body>
-	<!--header-->
-    <div class="header">
-    	<div class="wrap">
-        	<div class="navbar navbar_ clearfix">
-            	<div class="container">
-                    <div class="row">
-                        <div class="span4">
-                        	<div class="logo"><a href="index.html"><img src="img/logo.png" alt="" /></a></div>
+<!--header-->
+<div class="header">
+    <div class="wrap">
+        <div class="navbar navbar_ clearfix">
+            <div class="container">
+                <div class="row">
+                    <div class="span4">
+                        <div class="logo"><a href="index.html"><img src="img/logo.png" alt="" /></a></div>
+                    </div>
+                    <div class="span8">
+                        <div class="follow_us">
+                            <ul>
+                                <li><a href="http://www.facebook.com/lespanaturel" target="_blank" class="facebook">Facebook</a></li>
+                                <li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li>
+                            </ul>
                         </div>
-                        <div class="span8">
-                        	<div class="follow_us">
-                                <ul>
-                                    <li><a href="http://www.facebook.com/dulceandco" target="_blank" class="facebook">Facebook</a></li>
-                                    <li><a href="http://www.twitter.com/dulceandco" target="_blank" class="twitter">Twitter</a></li>
-                                    <li><a href="http://www.instagram.com/dulceandco" target="_blank" class="instagram">Instagram</a></li>
-                                </ul>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="my_menu">
-                                <ul class="mynav">
-                                    <li><a href="index.html">HOME</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li class="current"><a href="contactus.html">Contact Us</a></li>
-                                </ul>
-                            </div>
+                        <div class="clear"></div>
+                        <div class="my_menu">
+                            <ul class="mynav">
+                                <li><a href="index.html">HOME</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li class="current"><a href="contactus.html">Contact Us</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-             </div>
+            </div>
         </div>
     </div>
-    <!--//header-->
-        
-    <!--page_container-->
+</div>
+<!--//header-->
+
+
+<!--page_container-->
     <div class="page_container" style="background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.5)), url(img/body_bg.jpg); background-repeat: repeat; border: none; z-index: -1;">
     	<div class="breadcrumb">
         	<div class="wrap">
@@ -76,16 +75,10 @@
                         </div>
                         <div class="span4">
                             <h2 class="title"><span>Contact Us</span></h2>
-                            <b>Sherwin Ico</b><br/>
-                            Creative Director | DULCE&CO.<br/>
-                            Phone: + 1-647-929-7321 (Canada and U.S.A.)<br/>
-                            Phone: + 63-915-844-6509 (Philippines)<br/>
-                            Email: sherwin@dulceandco.com<br/>&nbsp;<br/>
-
-                            <b>Jorge Alava</b><br/>
-                            Event Stylist and Coordinator | DULCE&CO.<br/>
-                            Phone: + 63-915-953-2790 (Philippines)<br/>
-                            Email: jorge@dulceandco.com<br/>
+                            <b>1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                Quezon City, Philippines<br/>
+                                Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                Email: admin@lespanaturel.com</b>
                         </div>
                     </div>
                 </section>
@@ -94,32 +87,26 @@
     </div>
     <!--//page_container-->
 
-    <!--footer-->
-    <div id="footer">
-        <div class="footer_bottom">
-            <div class="wrap">
-                <div class="container">
-                    <div class="row">
-                        <div class="span5">
-                            <div class="foot_logo"><a href="index.html"><img src="img/foot_logo.png" alt="" /></a></div>
-                            <div class="copyright">&copy; 2016 Dulce & Co. All Rights Reserved.</div>
-                        </div>
-                        <div class="span7">
-                            <div class="foot_right_block">
-                                <div class="clear"></div>
-                                <div class="foot_menu">
+<!--footer-->
+<div id="footer">
+    <div class="footer_bottom">
+        <div class="wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <div class="foot_logo"><a href="index.html"><img src="img/foot_logo.png" alt="" /></a></div><br/>
+                        <div class="copyright">&copy; 2018 Le Spa Naturel. All Rights Reserved.</div>
+                    </div>
+                    <div class="span7">
+                        <div class="foot_right_block">
+                            <div class="clear"></div>
+                            <div class="foot_menu">
                                     <span style="color: lightgrey">
-                                        Sherwin Ico<br/>
-                                        Creative Director | DULCE&CO.<br/>
-                                        Phone: + 1-647-929-7321 (Canada and U.S.A.)<br/>
-                                        Phone: + 63-915-844-6509 (Philippines)<br/>
-                                        Email: sherwin@dulceandco.com<br/><br/>
-                                        Jorge Alava<br/>
-                                        Event Stylist and Coordinator | DULCE&CO.<br/>
-                                        Phone: + 63-915-953-2790 (Philippines)<br/>
-                                        Email: jorge@dulceandco.com
+                                        1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                        Quezon City, Philippines<br/>
+                                        Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                        Email: admin@lespanaturel.com<br/><br/>
                                     </span>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -127,7 +114,8 @@
             </div>
         </div>
     </div>
-    <!--//footer-->
+</div>
+<!--//footer-->
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/google-code-prettify/prettify.js"></script>
