--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
                             <div class="my_menu">
                                 <ul class="mynav">
                                     <li class="current"><a href="index.html">HOME</a></li>
-                                    <li><a href="about.html">About Us</a></li>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="products.html">Products</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -126,22 +123,19 @@
                     <div class="span12">
                         <ul id="mycarousel" class="jcarousel-skin-tango">
                             <li data-src="img/products/1.jpg">
-                                    <a href="img/products/1_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/1.jpg" alt="" /></a>
+                                    <a href="img/products/1_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/1_thumb.jpg" alt="" /></a>
                             </li>
                             <li data-src="img/products/2.jpg">
-                                    <a href="img/products/2.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/2.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
+                                    <a href="img/products/2_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/2_thumb.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
                             </li>
                             <li data-src="img/products/3.jpg">
-                                    <a href="img/products/3.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/3.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
+                                    <a href="img/products/3_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/3_thumb.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
                             </li>
                             <li data-src="img/products/4.jpg">
-                                    <a href="img/products/4.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/4.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
+                                    <a href="img/products/4_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/4_thumb.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
                             </li>
                             <li data-src="img/products/5.jpg">
-                                <a href="img/products/5.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/5.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
-                            </li>
-                            <li data-src="img/products/6.jpg">
-                                <a href="img/products/6.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/6.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
+                                <a href="img/products/5_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/5_thumb.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
                             </li>
                         </ul>
                     </div>
