--- a/contactus.html
+++ b/contactus.html
@@ -55,7 +55,7 @@
 
 
 <!--page_container-->
-    <div class="page_container" style="background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.5)), url(img/body_bg.jpg); background-repeat: repeat; border: none; z-index: -1;">
+    <div class="page_container">
     	<div class="breadcrumb">
         	<div class="wrap">
             	<div class="container">
