--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <span>ORGANIC SPA RETREAT</span>
                 <br/>We use the finest natural and organic ingredients<br/>that provides lasting hydration and nutrition for your skin,
                 <br/>to promote overall wellness.
+                <br/>BODY MASSAGE | BODY SCRUB | BODY MASK | FOOT SPA
                 <div class="welcome_line welcome_b"></div>
             </div>
         </div>
