--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="welcome_line welcome_t"></div>
                 <span>ORGANIC SPA RETREAT</span>
                 <br/>We use the finest natural and organic ingredients<br/>that provides lasting hydration and nutrition for your skin,
-                <br/>to promote overall wellness.
+                <br/>to promote overall wellness.<br/>
                 <br/>BODY MASSAGE | BODY SCRUB | BODY MASK | FOOT SPA
                 <div class="welcome_line welcome_b"></div>
             </div>
