--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <div class="wrap block">
             <div class="container welcome_block">
                 <div class="welcome_line welcome_t"></div>
-                <span>ORGANIC SPA RETREAT</span>
+                <span style="text-transform:none; font-size:50px; font-family: 'parisienneregular' ">Organic Spa Retreat</span>
                 <br/>We use the finest natural and organic ingredients<br/>that provides lasting hydration and nutrition for your skin,
                 <br/>to promote overall wellness.<br/>
-                <br/>BODY MASSAGE | BODY SCRUB | BODY MASK | FOOT SPA
+                <br/><div style="color: #ceb149; font-weight: bold;">BODY MASSAGE | BODY SCRUB | BODY MASK | FOOT SPA</div>
                 <div class="welcome_line welcome_b"></div>
             </div>
         </div>
