--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                             <li data-src="img/products/5.jpg">
                                 <a href="img/products/5_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/5_thumb.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
                             </li>
+                            <li data-src="img/products/6.jpg">
+                                <a href="img/products/6_thumb.jpg" rel="prettyPhoto[portfolio1]"><img src="img/products/6_thumb.jpg" alt="" /><span class="portfolio_zoom1"></span></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
