--- a/404.html
+++ b/404.html
@@ -33,17 +33,15 @@
                     <div class="span8">
                         <div class="follow_us">
                             <ul>
-                                <li><a href="http://www.facebook.com/dulceandco" target="_blank" class="facebook">Facebook</a></li>
-                                <li><a href="http://www.twitter.com/dulceandco" target="_blank" class="twitter">Twitter</a></li>
-                                <li><a href="http://www.instagram.com/dulceandco" target="_blank" class="instagram">Instagram</a></li>
+                                <li><a href="http://www.facebook.com/lespanaturel" target="_blank" class="facebook">Facebook</a></li>
+                                <li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li>
                             </ul>
                         </div>
                         <div class="clear"></div>
                         <div class="my_menu">
                             <ul class="mynav">
                                 <li class="current"><a href="index.html">HOME</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
+                                <li><a href="services.html">Services</a></li>
                                 <li><a href="contactus.html">Contact Us</a></li>
                             </ul>
                         </div>
@@ -54,6 +52,7 @@
     </div>
 </div>
 <!--//header-->
+
 
 <!--page_container-->
 <div class="page_container">
@@ -79,23 +78,18 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <div class="foot_logo"><a href="index.html"><img src="img/foot_logo.png" alt="" /></a></div>
-                        <div class="copyright">&copy; 2016 Dulce & Co. All Rights Reserved.</div>
+                        <div class="foot_logo"><a href="index.html"><img src="img/foot_logo.png" alt="" /></a></div><br/>
+                        <div class="copyright">&copy; 2018 Le Spa Naturel. All Rights Reserved.</div>
                     </div>
                     <div class="span7">
                         <div class="foot_right_block">
                             <div class="clear"></div>
                             <div class="foot_menu">
                                     <span style="color: lightgrey">
-                                        Sherwin Ico<br/>
-                                        Creative Director | DULCE&CO.<br/>
-                                        Phone: + 1-647-929-7321 (Canada and U.S.A.)<br/>
-                                        Phone: + 63-915-844-6509 (Philippines)<br/>
-                                        Email: sherwin@dulceandco.com<br/><br/>
-                                        Jorge Alava<br/>
-                                        Event Stylist and Coordinator | DULCE&CO.<br/>
-                                        Phone: + 63-915-953-2790 (Philippines)<br/>
-                                        Email: jorge@dulceandco.com
+                                        1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                        Quezon City, Philippines<br/>
+                                        Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                        Email: admin@lespanaturel.com<br/><br/>
                                     </span>
                             </div>
                         </div>
