--- a/contactus.html
+++ b/contactus.html
@@ -41,7 +41,7 @@
                         <div class="my_menu">
                             <ul class="mynav">
                                 <li><a href="index.html">HOME</a></li>
-                                <li><a href="services.html">Services</a></li>
+                                <li><a href="#">Services</a></li>
                                 <li class="current"><a href="contactus.html">Contact Us</a></li>
                             </ul>
                         </div>
