--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <div class="my_menu">
                                 <ul class="mynav">
                                     <li class="current"><a href="index.html">HOME</a></li>
-                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="#">Services</a></li>
                                     <li><a href="contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -116,7 +116,7 @@
         </div>
         <services-->
 
-        <!--featured works-->
+        <!--ingredients-->
         <div class="wrap block carousel_block">
             <div class="container">
                 <h2 class="upper">INGREDIENTS</h2>
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <!--//featured works-->
+        <!--//ingredients-->
 
     </div>
     <!--//page_container-->
