--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>LE SPA NATUREL | Organic Spa Retreat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="le spa, le spa naturel, spa, spa PH, le spa naturel wellness, le spa ph, le spa naturel ph">
-    <meta name="description" content="Organic Spa Retrea.">
+    <meta name="keywords" content="le spa naturel, le spa, spa, spa PH, le spa naturel wellness, le spa ph, le spa naturel ph, spa philippines, spa manila">
+    <meta name="description" content="Organic Spa Retreat">
     <meta name="author" content="Karen Ann Kho">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
