--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Dulce & Co. | Sweet Life. Sweet Memories.</title>
+    <title>LE SPA NATUREL | Organic Spa Retreat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="dulceandco, dulce and co, wedding, events, planning, floral design">
-    <meta name="description" content="Wedding and Events Stylist specializing in Planning, Floral Design, Decor, and Rentals.">
+    <meta name="keywords" content="le spa naturel, le spa, spa, spa PH, le spa naturel wellness, le spa ph, le spa naturel ph, spa philippines, spa manila">
+    <meta name="description" content="Organic Spa Retreat">
     <meta name="author" content="Karen Ann Kho">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
