--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
                                         1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                         Quezon City, Philippines<br/>
                                         Mobile Number: + 63-917-000-0000 (Philippines)<br/>
-                                        Email: admin@lespanaturel.com<br/><br/>
+                                        Email: info@lespanaturel.com<br/><br/>
                                     </span>
                             </div>
                         </div>
