--- a/contactus.html
+++ b/contactus.html
@@ -70,15 +70,94 @@
                         <div class="span4">
                             <h2 class="title"><span>Send us a Message</span></h2>
 
-                            <iframe id="JotFormIFrame" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="https://form.jotform.me/61309338873462" frameborder="0" style="width:100%; height:539px; border:none;" scrolling="no"> </iframe> <script type="text/javascript"> window.handleIFrameMessage = function(e) { var args = e.data.split(":"); var iframe = document.getElementById("JotFormIFrame"); if (!iframe) return; switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } if(window.location.href && window.location.href.indexOf("?") > -1) { var ifr = document.getElementById("JotFormIFrame"); var get = window.location.href.substr(window.location.href.indexOf("?") + 1); if(ifr && get.length > 0) { var src = ifr.src; src = src.indexOf("?") > -1 ? src + "&" + get : src + "?" + get; ifr.src = src; } } </script>
+
+                            <iframe
+                                    id="JotFormIFrame-82694976161470"
+                                    onload="window.parent.scrollTo(0,0)"
+                                    allowtransparency="true"
+                                    allowfullscreen="true"
+                                    allow="geolocation; microphone; camera"
+                                    src="https://form.jotform.me/82694976161470"
+                                    frameborder="0"
+                                    style="width: 1px;
+                                      min-width: 100%;
+                                      height:539px;
+                                      border:none;"
+                                    scrolling="no"
+                            >
+                            </iframe>
+                            <script type="text/javascript">
+                                var ifr = document.getElementById("JotFormIFrame-82694976161470");
+                                if(window.location.href && window.location.href.indexOf("?") > -1) {
+                                    var get = window.location.href.substr(window.location.href.indexOf("?") + 1);
+                                    if(ifr && get.length > 0) {
+                                        var src = ifr.src;
+                                        src = src.indexOf("?") > -1 ? src + "&" + get : src  + "?" + get;
+                                        ifr.src = src;
+                                    }
+                                }
+                                window.handleIFrameMessage = function(e) {
+                                    var args = e.data.split(":");
+                                    if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); }
+                                    if (!iframe) { return; }
+                                    switch (args[0]) {
+                                        case "scrollIntoView":
+                                            iframe.scrollIntoView();
+                                            break;
+                                        case "setHeight":
+                                            iframe.style.height = args[1] + "px";
+                                            break;
+                                        case "collapseErrorPage":
+                                            if (iframe.clientHeight > window.innerHeight) {
+                                                iframe.style.height = window.innerHeight + "px";
+                                            }
+                                            break;
+                                        case "reloadPage":
+                                            window.location.reload();
+                                            break;
+                                        case "loadScript":
+                                            var src = args[1];
+                                            if (args.length > 3) {
+                                                src = args[1] + ':' + args[2];
+                                            }
+                                            var script = document.createElement('script');
+                                            script.src = src;
+                                            script.type = 'text/javascript';
+                                            document.body.appendChild(script);
+                                            break;
+                                        case "exitFullscreen":
+                                            if      (window.document.exitFullscreen)        window.document.exitFullscreen();
+                                            else if (window.document.mozCancelFullScreen)   window.document.mozCancelFullScreen();
+                                            else if (window.document.mozCancelFullscreen)   window.document.mozCancelFullScreen();
+                                            else if (window.document.webkitExitFullscreen)  window.document.webkitExitFullscreen();
+                                            else if (window.document.msExitFullscreen)      window.document.msExitFullscreen();
+                                            break;
+                                    }
+                                    var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false;
+                                    if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) {
+                                        var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)};
+                                        iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*");
+                                    }
+                                };
+                                if (window.addEventListener) {
+                                    window.addEventListener("message", handleIFrameMessage, false);
+                                } else if (window.attachEvent) {
+                                    window.attachEvent("onmessage", handleIFrameMessage);
+                                }
+                            </script>
+
 
                         </div>
                         <div class="span4">
-                            <h2 class="title"><span>Contact Us</span></h2>
+                            <h2 class="title"><span>Address</span></h2>
                             <b>1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                 Quezon City, Philippines<br/>
                                 Mobile Number: + 63-917-000-0000 (Philippines)<br/>
-                                Email: admin@lespanaturel.com</b>
+                                Email: info@lespanaturel.com</b>
+                            <br/>
+
+                            <div><img src="img/map.png"></div>
+
                         </div>
                     </div>
                 </section>
@@ -101,12 +180,12 @@
                         <div class="foot_right_block">
                             <div class="clear"></div>
                             <div class="foot_menu">
-                                    <span style="color: lightgrey">
-                                        1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
-                                        Quezon City, Philippines<br/>
-                                        Mobile Number: + 63-917-000-0000 (Philippines)<br/>
-                                        Email: admin@lespanaturel.com<br/><br/>
-                                    </span>
+                                <span style="color: lightgrey">
+                                    1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                    Quezon City, Philippines<br/>
+                                    Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                    Email: info@lespanaturel.com<br/><br/>
+                                </span>
                             </div>
                         </div>
                     </div>
