--- a/contactus.html
+++ b/contactus.html
@@ -34,14 +34,14 @@
                         <div class="follow_us">
                             <ul>
                                 <li><a href="http://www.facebook.com/lespanaturel" target="_blank" class="facebook">Facebook</a></li>
-                                <li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li>
+                                <!--li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li-->
                             </ul>
                         </div>
                         <div class="clear"></div>
                         <div class="my_menu">
                             <ul class="mynav">
                                 <li><a href="index.html">HOME</a></li>
-                                <li><a href="#">Services</a></li>
+                                <!--li><a href="#">Services</a></li-->
                                 <li class="current"><a href="contactus.html">Contact Us</a></li>
                             </ul>
                         </div>
@@ -153,7 +153,7 @@
                             <h2 class="title"><span>Address</span></h2>
                             <b>1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                 Quezon City, Philippines<br/>
-                                Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                Mobile Number: + 63-956-866-3693 (Philippines)<br/>
                                 Email: info@lespanaturel.com</b>
                             <br/>
 
@@ -184,7 +184,7 @@
                                 <span style="color: lightgrey">
                                     1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                     Quezon City, Philippines<br/>
-                                    Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                    Mobile Number: + 63-956-866-3693 (Philippines)<br/>
                                     Email: info@lespanaturel.com<br/><br/>
                                 </span>
                             </div>
