--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                         	<div class="follow_us">
                                 <ul>
                                     <li><a href="http://www.facebook.com/lespanaturel" target="_blank" class="facebook">Facebook</a></li>
-                                    <li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li>
+                                    <!--li><a href="http://www.instagram.com/lespanaturel" target="_blank" class="instagram">Instagram</a></li-->
                                 </ul>
                             </div>
                             <div class="clear"></div>
                             <div class="my_menu">
                                 <ul class="mynav">
                                     <li class="current"><a href="index.html">HOME</a></li>
-                                    <li><a href="#">Services</a></li>
+                                    <!--li><a href="#">Services</a></li-->
                                     <li><a href="contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -60,7 +60,7 @@
             <div class="camera_wrap" id="camera_wrap_1">
                 <div data-src="img/slider/1.jpg"></div>
                 <div data-src="img/slider/2.jpg"></div>
-                <div data-src="img/slider/3.jpg"></div>                                        
+                <div data-src="img/slider/3.jpg"></div>
             </div><!-- #camera_wrap_1 -->
             <div class="clear"></div>	
         </div>        
@@ -70,7 +70,7 @@
         <div class="wrap block">
             <div class="container welcome_block">
                 <div class="welcome_line welcome_t"></div>
-                <span style="text-transform:none; font-size:50px; font-family: 'parisienneregular' ">Organic Spa Retreat</span>
+                <span style="text-transform:none; line-height: 50px; font-size:50px; font-family: 'parisienneregular' ">Organic Spa Retreat</span>
                 <br/>We use the finest natural and organic ingredients<br/>that provides lasting hydration and nutrition for your skin,
                 <br/>to promote overall wellness.<br/>
                 <br/><div style="color: #ceb149; font-weight: bold;">BODY MASSAGE | BODY SCRUB | BODY MASK | FOOT SPA</div>
@@ -168,7 +168,7 @@
                                     <span style="color: lightgrey">
                                         1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                         Quezon City, Philippines<br/>
-                                        Mobile Number: + 63-917-000-0000 (Philippines)<br/>
+                                        Mobile Number: + 63-956-866-3693 (Philippines)<br/>
                                         Email: info@lespanaturel.com<br/><br/>
                                     </span>
                                 </div>
