update desc and address

--- a/contactus.html
+++ b/contactus.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="span4">
                             <h2 class="title"><span>Address</span></h2>
-                            <b>1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                            <b>1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                 Quezon City, Philippines<br/>
                                 Mobile Number: + 63-956-866-3693 (Philippines)<br/>
                                 Email: info@lespanaturel.com</b>
@@ -182,7 +182,7 @@
                             <div class="clear"></div>
                             <div class="foot_menu">
                                 <span style="color: lightgrey">
-                                    1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                    1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                     Quezon City, Philippines<br/>
                                     Mobile Number: + 63-956-866-3693 (Philippines)<br/>
                                     Email: info@lespanaturel.com<br/><br/>
