--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container welcome_block">
                 <div class="welcome_line welcome_t"></div>
                 <span style="text-transform:none; line-height: 50px; font-size:50px; font-family: 'parisienneregular' ">Organic Spa Retreat</span>
-                <br/>We use the finest natural and organic ingredients<br/>that provides lasting hydration and nutrition for your skin,
+                <br/>We use the finest natural and organic ingredients<br/>that provide lasting hydration and nutrition for your skin,
                 <br/>to promote overall wellness.<br/>
                 <br/><div style="color: #ceb149; font-weight: bold;">BODY MASSAGE | BODY SCRUB | BODY MASK | FOOT SPA</div>
                 <div class="welcome_line welcome_b"></div>
@@ -166,7 +166,7 @@
                                 <div class="clear"></div>
                                 <div class="foot_menu">
                                     <span style="color: lightgrey">
-                                        1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                        1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                         Quezon City, Philippines<br/>
                                         Mobile Number: + 63-956-866-3693 (Philippines)<br/>
                                         Email: info@lespanaturel.com<br/><br/>
