--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
                             <div class="clear"></div>
                             <div class="foot_menu">
                                     <span style="color: lightgrey">
-                                        1102B, 1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
+                                        1st Level Phase 2, UP Town Center Katipunan Ave.<br/>
                                         Quezon City, Philippines<br/>
                                         Mobile Number: + 63-917-000-0000 (Philippines)<br/>
                                         Email: info@lespanaturel.com<br/><br/>
