--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								</li>
 								<li><a href="#">PROMO</a></li>
 								<li><a href="#">MEMBERSHIP</a></li>
-								<li><a href="#">CONTACT</a></li>
+								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
 						</div>
 					</div>
@@ -105,7 +105,7 @@
 					   					<h2 class="head-3">YOUTH</h2>
 										<h2 class="head-2">MASSAGE</h2>
 					   					<p class="category"><span>FACE, SHOULDER &amp; HEAD</span></p>
-					   					<p><a href="#" class="btn btn-primary">MAKE A RESERVATION</a></p>
+					   					<p><a href="contact.html" class="btn btn-primary">MAKE A RESERVATION</a></p>
 				   					</div>
 				   				</div>
 				   			</div>
@@ -280,7 +280,7 @@
 							<ul class="colorlib-footer-links">
 								<li><a href="#">Membership</a></li>
 								<li><a href="#">Gift Voucher</a></li>
-								<li><a href="#">Customer Services</a></li>
+								<li><a href="contact.html">Customer Services</a></li>
 							</ul>
 						</p>
 					</div>
