--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							</div>
                             <div class="desc">
                                 <h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE</br></a></h3>
-                                <p class="price"><span>PHP 980 (WEEKDAYS)<br>PHP 1,120 (WEEKENDS)</span></p>
+                                <p class="price"><span>PHP 980 (WEEKDAYS)<br>PHP 1,080 (WEEKENDS)</span></p>
                             </div>
 						</div>
 					</div>
@@ -198,7 +198,7 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
 							<div class="desc">
-								<h3><a href="#">» FOOT SPA WITH PEDICURE<br>» 30-MINUTES FOOT REFLEXOLOGY</a></h3>
+								<h3><a href="#">» ORGANIC FOOT SPA TREATMENT WITH PEDICURE<br>» 30-MINUTES FOOT REFLEXOLOGY</a></h3>
                                 <p class="price"><span>PHP 980 (WEEKDAYS)<br>PHP 1,080 (WEEKENDS)</span></p>
 							</div>
 						</div>
