--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
                             <div class="desc">
-                                <h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE</br></a></h3>
-                                <p class="price"><span>PHP 980 (WEEKDAYS)<br>PHP 1,080 (WEEKENDS)</span></p>
+                                <h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE</br><br>» 10 MINS HAND MASSAGE</a></h3>
+                                <p class="price"><span>PHP 1,080 (WEEKDAYS)<br>PHP 1,180 (WEEKENDS)</span></p>
                             </div>
 						</div>
 					</div>
@@ -210,7 +210,7 @@
 							</div>
 							<div class="desc">
 								<h3><a href="#">» COFFEE BODY POLISH <BR>» 10-MINUTES FOUNTAIN OF YOUTH MASSAGE</a></h3>
-                                <p class="price"><span>PHP 880</span></p>
+                                <p class="price"><span>PHP 880 (WEEKDAYS)<br>PHP 980 (WEEKENDS)</span></p>
 							</div>
 						</div>
 					</div>
@@ -220,7 +220,7 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
 							<div class="desc">
-								<h3><a href="#">BUY 3, GET 1 FREE ON SIGNATURE TREATMENTS (MINIMUM OF 4 PERSONS)</a></h3>
+								<h3><a href="#">BUY 3, GET 1 FREE ON BODY TREATMENTS (MINIMUM OF 4 PERSONS)</a></h3>
 								<p class="price"><span>WEEKDAYS ONLY</span></p>
 							</div>
 						</div>
