--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
                             <div class="desc">
-                                <h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE</br><br>» 10 MINS HAND MASSAGE</a></h3>
+                                <h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE<br>» 10 MINS HAND MASSAGE</a></h3>
                                 <p class="price"><span>PHP 1,080 (WEEKDAYS)<br>PHP 1,180 (WEEKENDS)</span></p>
                             </div>
 						</div>
