--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading">
 						<h2><span>PROMOS AND PACKAGES</span></h2>
-						<p>Take advantage of our special promotions to treat yourself and loved ones to a relaxing SPA experience! Everyone deserves a healing, relaxing, stress-relieving massage.</p>
+						<p>Take advantage of our special promotions to treat yourself and loved ones to a relaxing SPA experience!
+							Everyone deserves a healing, relaxing, stress-relieving massage.<br>
+							Call/text to make an appointment. Blackout dates apply.</p>
 					</div>
 				</div>
 				<div class="row">
