--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,11 @@
 
 	<div id="page">
 		<nav class="colorlib-nav" role="navigation">
-			<div class="top-menu">
+			<div class="top-menu" style="background-color: #FFC300;">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-2">
-							<div id="colorlib-logo"><a href="index.html"><IMG src="images/LOGO-side.png"></a></div>
+							<div id="colorlib-logo"><a href="index.html"><IMG src="images/LOGO-side_white.png"></a></div>
 						</div>
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
@@ -85,14 +85,14 @@
 								</li>
 								<li><a href="#">PROMO</a></li>
 								<li><a href="#">MEMBERSHIP</a></li>
-								<li class="active"><a href="#">CONTACT</a></li>
+								<li class="active_2"><a href="#">CONTACT</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</nav>
-		<aside id="colorlib-hero" class="breadcrumbs">
+		<!--aside id="colorlib-hero" class="breadcrumbs">
 			<div class="flexslider">
 				<ul class="slides">
 			   	<li style="background-image: url(images/cover-img-1.jpg);">
@@ -100,17 +100,19 @@
 			   		<div class="container-fluid">
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 slider-text">
-				   				<div class="slider-text-inner text-center">
+				   				<div class="slider-text-inner text-center"-->
 				   					<!--h1>Contact</h1>
 				   					<h2 class="bread"><span><a href="index.html">Home</a></span> <span>Contact</span></h2-->
-				   				</div>
+				   				<!--/div>
 				   			</div>
 				   		</div>
 			   		</div>
 			   	</li>
 			  	</ul>
 		  	</div>
-		</aside>
+		</aside-->
+
+		<div><p>&nbsp;</p></div>
 
 		<div id="colorlib-contact">
 			<div class="container">
