--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
 							<div class="desc">
-								<h3><a href="#">» ORGANIC FOOT SPA TREATMENT WITH PEDICURE<br>» 30-MINUTES FOOT REFLEXOLOGY</a></h3>
+								<h3><a href="#">» ORGANIC FOOT SPA TREATMENT <br>» PEDICURE<br>» 30-MINUTES FOOT REFLEXOLOGY<br>&NonBreakingSpace;</a></h3>
                                 <p class="price"><span>PHP 980 (WEEKDAYS)<br>PHP 1,080 (WEEKENDS)</span></p>
 							</div>
 						</div>
@@ -211,7 +211,7 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
 							<div class="desc">
-								<h3><a href="#">» COFFEE BODY POLISH <BR>» 10-MINUTES FOUNTAIN OF YOUTH MASSAGE</a></h3>
+								<h3><a href="#">» COFFEE BODY POLISH <BR>» 10-MINUTES FOUNTAIN OF YOUTH MASSAGE<br>&NonBreakingSpace;</a></h3>
                                 <p class="price"><span>PHP 880 (WEEKDAYS)<br>PHP 980 (WEEKENDS)</span></p>
 							</div>
 						</div>
@@ -222,8 +222,8 @@
 								<p class="tag"><span class="new">New</span></p>
 							</div>
 							<div class="desc">
-								<h3><a href="#">BUY 3, GET 1 FREE ON BODY TREATMENTS (MINIMUM OF 4 PERSONS)</a></h3>
-								<p class="price"><span>WEEKDAYS ONLY</span></p>
+								<h3><a href="#">BUY 4, GET 1 FREE ON LE PURIFIANT<br>» HIMALAYAN PINK SALT BODY SCRUB<br>» VOLCANIC MUD BODY MASK<br>» BODY MASSAGE</a></h3>
+								<p class="price"><span>PHP 1,960 (WEEKDAYS)<br>PHP 2,280 (WEEKENDS)</span></p>
 							</div>
 						</div>
 					</div>
