--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
 								<li class="has-dropdown">
 									<a href="#">SERVICES</a>
 									<ul class="dropdown">
-										<li><a href="#">Body Massage</a></li>
-										<li><a href="#">Body Scrub & Body Wrap</a></li>
-										<li><a href="#">Body Treatment Packages</a></li>
+										<li><a href="massage.html">Body Massage</a></li>
+										<li><a href="#">Body Scrub & Body Mask</a></li>
 										<li><a href="#">Foot Spa Packages</a></li>
 										<li><a href="#">Nail Services</a></li>
+										<li><a href="#">Packages</a></li>
+										<li><a href="#">Spa Party</a></li>
 									</ul>
 								</li>
 								<li><a href="#">PROMO</a></li>
