--- a/massage.html
+++ b/massage.html
@@ -76,7 +76,7 @@
 								<li class="has-dropdown">
 									<a href="#">SERVICES</a>
 									<ul class="dropdown">
-										<li><a href="massage.html">Body Massage</a></li>
+										<li><a href="#">Body Massage</a></li>
 										<li><a href="#">Body Scrub & Body Mask</a></li>
 										<li><a href="#">Foot Spa Packages</a></li>
 										<li><a href="#">Nail Services</a></li>
@@ -112,21 +112,6 @@
 			  	</ul>
 		  	</div>
 		</aside-->
-
-		<section style="background-color: #f5f5f5; height: 39px;">
-			<div class="crumbs">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12">
-							<ul class="breadcrumb">
-								<li> Home</li>
-								<li> Contact</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
 
 		<div><p>&nbsp;</p></div>
 
