--- a/massage.html
+++ b/massage.html
@@ -63,7 +63,7 @@
 
 	<div id="page">
 		<nav class="colorlib-nav" role="navigation">
-			<div class="top-menu" style="background-color: #FFC300;">
+			<div class="top-menu" style="background-color: #ccb248;">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-2">
@@ -86,107 +86,122 @@
 								</li>
 								<li><a href="#">PROMO</a></li>
 								<li><a href="#">MEMBERSHIP</a></li>
-								<li class="active_2"><a href="#">CONTACT</a></li>
+								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</nav>
-		<!--aside id="colorlib-hero" class="breadcrumbs">
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url(images/cover-img-1.jpg);">
-			   		<div class="overlay"></div>
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 slider-text">
-				   				<div class="slider-text-inner text-center"-->
-				   					<!--h1>Contact</h1>
-				   					<h2 class="bread"><span><a href="index.html">Home</a></span> <span>Contact</span></h2-->
-				   				<!--/div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			  	</ul>
-		  	</div>
-		</aside-->
+
+
+		<section style="background-color: #f5f5f5; height: 39px;">
+			<div class="crumbs">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<ul class="breadcrumb">
+								<li> Home</li>
+								<li> Services</li>
+								<li> Body Massage</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<div><p>&nbsp;</p></div>
 
-		<div id="colorlib-contact">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-10 col-md-offset-1">
-						<h3>Contact Information</h3>
-						<div class="row contact-info-wrap">
-							<div class="col-md-3">
-								<p><span><i class="icon-location"></i></span> 1st Level Phase 2, UP Town Center Katipunan Ave., Quezon City, Philippines</p>
+		<div class="colorlib-blog">
+			<div class="crumbs">
+
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
+							<div class="row">
+								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
+									<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<p>&nbsp;</p>
+								</div>
+								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
+									<div class="content">
+										<h4>Massages</h4>
+										<h4 style="color: #dac25c">Body Massage</h4>
+										<ul class="colorlib-footer-links">
+											<li>Swedish Massage</li>
+											<li>Shiatsu Massage</li>
+											<li>Combination Massage</li>
+											<li>Deep Tissue Massage</li>
+											<li>Aromatherapy Massage</li>
+											<li>Hot Stone Massage</li>
+											<li>Signature Massage</li>
+										</ul>
+										<p></p>
+										<h4 style="color: #dac25c">Specific Massage</h4>
+										<ul class="colorlib-footer-links">
+											<li>Back Massage</li>
+											<li>Fountain of Youth Massage</li>
+											<li>Hand & Foot Massage</li>
+											<li>Foot Reflexology</li>
+										</ul>
+									</div>
+								</div>
 							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-phone3"></i></span> Mobile Number: + 63-956-866-3693</a></p>
+							<hr>
+						</div>
+						<div class="col-xs-12 col-md-pull-9 col-md-3">
+							<div>
+								<h4>Packages</h4>
+								<h4>Massages</h4>
+								<h4>Body Scrubs & Body Masks</h4>
+								<h4>Nail Services</h4>
+								<h4>Spa Party</h4>
 							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@lespanaturel.com">info@lespanaturel.com</a></p>
-							</div>
-							<div class="col-md-3">
-								<p><span><i class="icon-globe"></i></span> <a href="#">lespanaturel.com</a></p>
+
+				<!--div class="container">
+
+					<div class="row row-pb-md">
+						<div class="col-md-4 colorlib-widget">
+							<h4>Packages</h4>
+							<p></p>
+							<h4 style="color: #dac25c">Body Massage</h4>
+							<p></p>
+							<h4>Body Scrub & Body Mask</h4>
+							<p></p>
+							<h4>Nail Services</h4>
+							<p></p>
+							<h4>Spa Party</h4>
+						</div>
+						<hr>
+						<div class="col-md-5">
+							<h4 style="color: #dac25c">Body Massage</h4>
+							<ul class="colorlib-footer-links">
+								<li>Swedish Massage</li>
+								<li>Shiatsu Massage</li>
+								<li>Combination Massage</li>
+								<li>Deep Tissue Massage</li>
+								<li>Aromatherapy Massage</li>
+								<li>Hot Stone Massage</li>
+								<li>Signature Massage</li>
+							</ul>
+							<p></p>
+							<h4 style="color: #dac25c">Specific Massage</h4>
+							<ul class="colorlib-footer-links">
+								<li>Back Massage</li>
+								<li>Fountain of Youth Massage</li>
+								<li>Hand & Foot Massage</li>
+								<li>Foot Reflexology</li>
+							</ul>
+						</div>
+						<div class="col-md-3">
+							<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
+								<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
 							</div>
 						</div>
 					</div>
-					<div class="col-md-10 col-md-offset-1">
-						<div class="contact-wrap">
-							<h3>Get In Touch</h3>
-							<form name="lsn" method="post" action="https://formspree.io/info@lespanaturel.com">
-								<div class="row form-group">
-									<!--div class="col-md-6 padding-bottom">
-										<label for="fname">First Name</label>
-										<input type="text" name="name" id="fname" class="form-control" placeholder="Your First Name">
-									</div>
-									<div class="col-md-6">
-										<label for="lname">Last Name</label>
-										<input type="text" id="lname" class="form-control" placeholder="Your Last Name">
-									</div-->
-                                    <div class="col-md-12">
-                                        <label for="name">Name</label>
-                                        <input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
-                                    </div>
+				</div-->
 
-                                </div>
-
-								<div class="row form-group">
-									<div class="col-md-12">
-										<label for="email">Email</label>
-										<input type="text" name="_replyto" id="email" class="form-control" placeholder="Your E-mail Address">
-									</div>
-								</div>
-
-								<div class="row form-group">
-									<div class="col-md-12">
-										<label for="subject">Subject</label>
-										<input type="text" name="_subject" id="subject" class="form-control" placeholder="Subject of this message">
-									</div>
-								</div>
-
-								<div class="row form-group">
-									<div class="col-md-12">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something to us"></textarea>
-									</div>
-								</div>
-								<div class="form-group text-center">
-									<input type="submit" value="Send Message" class="btn btn-primary">
-									<input type="hidden" name="_next" value="www.lespanaturel.com" />
-								</div>
-							</form>		
-						</div>
-					</div>
-
-                    <div class="col-md-8 col-md-offset-2">
-                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=le%20spa%20naturel&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://camzzle.com"></a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-                    </div>
-				</div>
 			</div>
 		</div>
 
