--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
 	<div id="page">
 		<nav class="colorlib-nav" role="navigation">
-			<div class="top-menu" style="background-color: #FFC300;">
+			<div class="top-menu" style="background-color: #dac25c;">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-2">
